--- a/Neptuo.WebSite/Views/Shared/_Layout.cshtml
+++ b/Neptuo.WebSite/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                             <span class="glyphicon glyphicon-cloud"></span>
                         </a>
                     </li>*@
-                    <li class="@Request.ActiveCssClass("~/me")">
+                    <li class="@Request.ActiveCssClass("~/blog")">
                         <a href="~/blog">
                             Blog
                             <span class="glyphicon glyphicon-bookmark"></span>
