--- a/Neptuo.WebSite/Views/Content/Blog.cshtml
+++ b/Neptuo.WebSite/Views/Content/Blog.cshtml
@@ -12,15 +12,42 @@
     </div>
 </div>
 
+<style>
+    .date {
+        float: left;
+        width: 80px;
+        height: 80px;
+        margin-right: 15px;
+    }
+
+    .date .day, .date .month {
+        text-align: center;
+    }
+
+    .date .day {
+        font-weight: bold;
+        font-size: 40px;
+    }
+
+    .folder-heading {
+        float: left;
+    }
+</style>
 
 <div class="container">
     @foreach (var post in Model)
     {
         <div class="folder">
-            <h2 class="folder-heading">
-                <a href="@Url.RouteUrl("BlogPost", new { releaseDate = post.ReleaseDate.ToString("yyyy-MM-dd"), slug = post.Url })">@post.Title</a>
-            </h2>
-            <article>@post.Description</article>
+            <div class="date">
+                <div class="day">@post.ReleaseDate.Day</div>
+                <div class="month">@post.ReleaseDate.ToString("MMM")</div>
+            </div>
+            <div class="folder-content">
+                <h2 class="folder-heading">
+                    <a href="@Url.RouteUrl("BlogPost", new { releaseDate = post.ReleaseDate.ToString("yyyy-MM-dd"), slug = post.Url })">@post.Title</a>
+                </h2>
+                <article>@post.Description</article>
+            </div>
         </div>
     }
 </div>
