--- a/Neptuo.WebSite/Views/Content/BlogPost.cshtml
+++ b/Neptuo.WebSite/Views/Content/BlogPost.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = Model.Title;
 }
 
-<div class="intro blog">
+<div class="intro blogpost">
     <div class="intro-content container">
         <h1>@Model.Title</h1>
         <p>
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-<div class="container blog">
+<div class="container blogpost">
     <div class="folder">
         @Html.Raw(Model.Content)
     </div>
