--- a/Neptuo.WebSite/Views/Content/Project.cshtml
+++ b/Neptuo.WebSite/Views/Content/Project.cshtml
@@ -1,13 +1,13 @@
 ﻿@model Neptuo.WebSite.Models.Projects.ProjectModelViewModel
 @{
-    ViewBag.Title = "Our libraries, tools &amp; utilities that helps during development!";
+    ViewBag.Title = "Apps, libraries, tools &amp; utilities that helps during development and every day life.";
 }
 
 <div class="intro">
     <div class="intro-content container">
         <h1>Our projects!</h1>
         <p>
-            Our libraries, tools &amp; utilities that helps during development
+            Apps, libs &amp; tools that helps during every day (developer) life.
         </p>
     </div>
 </div>
