--- a/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
+++ b/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
@@ -6,7 +6,7 @@
     <div class="intro-content container">
         <h1>Our projects!</h1>
         <p>
-            Our libraries, tools &amp; utilities that helps during development
+            Apps, libs &amp; tools that helps during every day (developer) life.
         </p>
     </div>
 </div>
