--- a/Neptuo.WebSite/Views/Content/Blog.cshtml
+++ b/Neptuo.WebSite/Views/Content/Blog.cshtml
@@ -7,34 +7,12 @@
     <div class="intro-content container">
         <h1>Blog...</h1>
         <p>
-            Thoughts to share
+            Ideas to share. Leasons learned.
         </p>
     </div>
 </div>
 
-<style>
-    .date {
-        float: left;
-        width: 80px;
-        height: 80px;
-        margin-right: 15px;
-    }
-
-    .date .day, .date .month {
-        text-align: center;
-    }
-
-    .date .day {
-        font-weight: bold;
-        font-size: 40px;
-    }
-
-    .folder-heading {
-        float: left;
-    }
-</style>
-
-<div class="container">
+<div class="container blog">
     @foreach (var post in Model)
     {
         <div class="folder">
@@ -48,6 +26,7 @@
                 </h2>
                 <article>@post.Description</article>
             </div>
+            <div class="clear"></div>
         </div>
     }
 </div>
