--- a/Neptuo.WebSite/Views/Content/Project.cshtml
+++ b/Neptuo.WebSite/Views/Content/Project.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Neptuo.WebSite.Models.Projects.ProjectModelViewModel
 @{
-    ViewBag.Title = "Apps, libraries, tools &amp; utilities that helps during development and every day life.";
+    ViewBag.Title = "Apps, libraries, tools & utilities that helps during development and every day life.";
 }
 
 <div class="intro">
