--- a/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
+++ b/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Our libraries, tools &amp; utilities that helps during development!";
+    ViewBag.Title = "Our libraries, tools & utilities that helps during development!";
 }
 
 <div class="intro">
