--- a/Neptuo.WebSite/Content/common.css
+++ b/Neptuo.WebSite/Content/common.css
@@ -46,3 +46,15 @@ p.last {
 .col-md-2, .col-md-3, .col-md-4, .col-md-6, .col-md-7, .col-md-8 {
     padding: 0;
 }
+
+pre {
+    font: 14px Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    line-height: 1.5;
+    padding: 9.5px 9.5px 0 9.5px;
+    border: none;
+}
+
+code {
+    color: #333;
+    background: #eee;
+}
