--- a/Neptuo.WebSite/Content/responsivness.css
+++ b/Neptuo.WebSite/Content/responsivness.css
@@ -1,11 +1,21 @@
-﻿@media (max-width: 768px) {
+﻿@media (max-width: 992px) {
 
     .navbar-brand img {
         height: 60px;
     }
-
-    .navbar ul li a {
-        font-size: 45px;
+    .navbar > .container .navbar-brand {
+        width: 170px;
     }
 
+    .navbar a {
+        height: 70px;
+    }
+
+    .navbar ul li a {
+        padding: 10px 20px;
+        font-size: 45px;
+    }
+    .navbar ul li a .subtext {
+        display: none;
+    }
 }
