--- a/src/Neptuo.WebSite/Views/Content/Home.cshtml
+++ b/src/Neptuo.WebSite/Views/Content/Home.cshtml
@@ -3,6 +3,9 @@
 <div class="intro">
     <div class="intro-content container">
         <h1>Hello!</h1>
+        <p>
+            We known modern technologies and like application development.
+        </p>
     </div>
 </div>
 
@@ -10,22 +13,24 @@
 
     <div class="folder">
         <h2>What can we do for you?</h2>
-        <span>Would you like destkop application? Do you prefer web application with rich user interface?</span>
+        <span>
+            Would you like destkop application or do you prefer web application with rich user interface? Or mobile one?
+        </span>
     </div>
 
-    <div class="home-services">
+    <div class="folder home-services">
         <div class="col-md-4">
-            <div class="folder home-service">
+            <div class="home-service first">
                 <div class="folder-heading">
                     <span class="glyphicon glyphicon-usd"></span>
                     <h2>Business apps</h2>
                 </div>
                 <p>
-                    Applications based on customers requirements, tailored for his needs,
-                    based on our infrastructure for lowering costs.
+                    Apps based on customers requirements, tailored for his needs,
+                    build on our reusable infrastructure for lowering costs.
                 </p>
                 <p>
-                    Build for web, mobile or desktop platform for optimal use.
+                    Developed as web, mobile or desktop platform for optimal use.
                 </p>
 
                 @*<p class="first">
@@ -39,21 +44,56 @@
                     </p>*@
             </div>
         </div>
-        <div class="col-md-5">
-            <div class="folder home-service">
+        <div class="col-md-4">
+            <div class="home-service">
                 <div class="folder-heading">
                     <span class="glyphicon glyphicon-globe"></span>
                     <h2>Web sites</h2>
                 </div>
                 <p class="first">
-                    We are building customer web sites. Our customers are able to manage content of their web site
-                    thanks to CMS we are using. Our CMS is multi tenant, so many web sites can be hosted in a single instance.
-                    Thanks to access control, each user can have access only to small part of the whole system.
+                    Customers web presentations, using multi tenant CMS, PHP based for lowcost hosting
+                    and with access control, so each user can have access only to small part of the whole system.
                 </p>
             </div>
         </div>
-        <div class="col-md-3">
-            <div class="folder home-service">
+        <div class="col-md-4">
+            <div class="home-service last">
+                <div class="folder-heading">
+                    <span class="glyphicon glyphicon-phone"></span>
+                    <h2>Mobile apps</h2>
+                </div>
+                <p class="first">
+                    We have experiences with building Android or Windows Mobile applications.
+                    We can use Xamarin for cross platform apps or develope native app for that platform.
+                </p>
+            </div>
+        </div>
+        <div class="clear"></div>
+
+        <div class="col-md-4">
+            <div class="home-service first">
+                <div class="folder-heading">
+                    <span>C#</span>
+                    <h2>Most prefered</h2>
+                </div>
+                <p class="first">
+                    Our most prefered language, running of Windows and WebServers and thanks to the .NET Core also on Linux and MAC OS.
+                </p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="home-service first">
+                <div class="folder-heading">
+                    <span>PHP</span>
+                    <h2>Lowcost</h2>
+                </div>
+                <p class="first">
+                    Our CMS is build using PHP and thanks to low cost of PHP hostings, it is ideal for personal or company presentations and small business applications.
+                </p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="home-service last">
                 <div class="folder-heading">
                     <span class="glyphicon glyphicon-thumbs-up"></span>
                     <h2>For hire</h2>
@@ -61,55 +101,86 @@
                 <p class="first">
                     We are available for hire, to share our experiences, skills and knowledge.
                 </p>
-            </div>
-        </div>
-        <div class="col-md-5">
-            <div class="folder home-service">
-                <div class="folder-heading">
-                    <span class="glyphicon glyphicon-globe"></span>
-                    <h2>Mobile applications</h2>
-                </div>
-                <p class="first">
-                    ...
+                <p>
+                    We can offer C#, PHP, SQL or JavaScript skills and years of experiences.
                 </p>
             </div>
         </div>
         <div class="clear"></div>
+
     </div>
 
     <div class="folder">
         <h2 class="folder-heading">
-            <a href="@Url.Action("service")">Web sites made by us</a>
+            <a href="@Url.Action("project")">Open-source projects</a>
         </h2>
         <p class="first">
-            We are building customer web sites. Our customers are able to manage content of their web site
-            thanks to CMS we are using. Our CMS is multi tenant, so many web sites can be hosted in a single instance.
-            Thanks to access control, each user can have access only to small part of the whole system.
+            We have developed most of our infrastructure as open-source, hosted on Google Code and now on GitHub.
+            These projects starts with simple extensions for system libraries and ends with complete CQRS infrastructure with EventSourcing
+            and support for persistent command and event delivery.
+        </p>
+        <p>
+            As most of our implementations are based on Windows and .NET platform, these projects are delivered as NuGet packages, VisualStudio extensions
+            or ClickOnce windows applications.
         </p>
 
-        @Html.Partial("ShortWebs", Model.Webs)
+        @if (Model.Projects.Any())
+        {
+            <div class="col-md-5">
+                <ul>
+                    @foreach (var project in Model.Projects.Take(5))
+                    {
+                        <li>
+                            <a href="@Url.RouteUrl("project", new { type = project.Type, project = project.LocalUrl })">@project.Name</a>
+                        </li>
+                    }
+                </ul>
+            </div>
+            <div class="col-md-6">
+                <ul>
+                    @foreach (var project in Model.Projects.Skip(5))
+                    {
+                        <li>
+                            <a href="@Url.RouteUrl("project", new { type = project.Type, project = project.LocalUrl })">@project.Name</a>
+                        </li>
+                    }
+                </ul>
+            </div>
+        }
         <div class="clear"></div>
     </div>
 
     <div class="folder">
         <h2 class="folder-heading">
-            <a href="@Url.Action("project")">Our projects</a>
+            <a href="@Url.Action("service")">Lastest web references</a>
         </h2>
-        <p class="first">
-            We have open-sourced many of our tools that helps us delivering software. As most of our implementations
-            are based on Windows and .NET platform, these projects are delivered as NuGet packages.
+        <p>
+            Here are some of the recent web sites we have made. In some cases we have outsourced graphics. Some of the sites are running our CMS.
+        </p>
+        
+        @Html.Partial("ShortWebs", Model.Webs)
+
+        <div class="clear"></div>
+    </div>
+
+    <div class="folder blog">
+        <h2 class="folder-heading">
+            Since this year, we are writing <a href="@Url.Action("blog")">developers blog</a>
+        </h2>
+        <p class="first" style="margin-bottom: 20px;">
+            You can find there various topics from developers life. Most of them will be from C#, JavaScript, compiling C# to JavaScript, architectural thoughs etc.
         </p>
 
-        @if (Model.Projects.Any())
-            {
-            <ul>
-                @foreach (var project in Model.Projects)
-                {
-                    <li>
-                        <a href="@Url.RouteUrl("project", new { type = project.Type, project = project.LocalUrl })">@project.Name</a>
-                    </li>
-                }
-            </ul>
-        }
+        <div class="date">
+            <div class="day">@Model.BlogPost.ReleaseDate.Day</div>
+            <div class="month">@Model.BlogPost.ReleaseDate.ToString("MMM")</div>
+        </div>
+        <div class="folder-content">
+            <h2 class="folder-heading">
+                <a href="@Url.RouteUrl("BlogPost", new { year = Model.BlogPost.ReleaseDate.Year, month = Model.BlogPost.ReleaseDate.Month, day = Model.BlogPost.ReleaseDate.Day, slug = Model.BlogPost.Url })">@Model.BlogPost.Title</a>
+            </h2>
+            <article>@Model.BlogPost.Description</article>
+        </div>
+        <div class="clear"></div>
     </div>
 </div>
