Update .NET icon.

--- a/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
+++ b/Neptuo.WebSite/Views/Content/ProjectOverview.cshtml
@@ -34,7 +34,7 @@
 
     <div class="folder folder-collapsed">
         <h2 class="folder-heading">
-            <img src="http://filebrowser.magiccms.org/img/NET.png" height="30" />
+            <img src="http://blog.tech-fellow.net/content/images/2015/08/nuget.png" width="30" height="30" />
             @Html.ActionLink(".NET libraries/packages", "Project", new { type = "dev" })
             <span class="glyphicon folder-switch"></span>
         </h2>
