--- a/Neptuo.WebSite/Views/Shared/_Layout.cshtml
+++ b/Neptuo.WebSite/Views/Shared/_Layout.cshtml
@@ -83,5 +83,6 @@
         ga('create', 'UA-12031460-1', 'auto');
         ga('send', 'pageview');
     </script>
+    @RenderSection("Javascript", false)
 </body>
 </html>
