--- a/Neptuo.WebSite/Content/design.css
+++ b/Neptuo.WebSite/Content/design.css
@@ -420,3 +420,13 @@ ul.version {
     line-height: 1;
     color: #999999;
 }
+
+.comment .left img {
+    margin: 5px 10px 0 0;
+    width: 50px;
+    height: 50px;
+}
+
+.comment-heading {
+    text-align: center;
+}
