--- a/Neptuo.WebSite/Views/Content/BlogPost.cshtml
+++ b/Neptuo.WebSite/Views/Content/BlogPost.cshtml
@@ -30,15 +30,19 @@
 
     @if (Model.Post.GitHubCommentPath != null)
     {
-        <div id="comments" class="folder">
-            <div>
-                <h3>Comments</h3>
+        <div class="folder">
+            <div class="comment-heading">
+                <h3>
+                    <span class="hidden">Comments</span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                </h3>
             
                 To leave a comment, please sign-in at GitHub and
                 <a href="https://github.com/@Model.Post.GitHubCommentPath" target="_blank">
                     comment on the issue associated with this post.
                 </a>
             </div>
+            <div id="comments"></div>
         </div>
     }
 </div>
@@ -47,7 +51,6 @@
 
     @if (Model.Post.GitHubCommentPath != null)
     {
-        <script src="~/Scripts/jquery-1.9.1.js"></script>
         <script src="~/Scripts/blogcomments.js"></script>
         <script>
 
