--- a/Content/design.css
+++ b/Content/design.css
@@ -85,12 +85,13 @@
         color: white;
         display: block;
     }
+
     .navbar ul li.disabled a {
         cursor: not-allowed;
         color: #737578;
         background: transparent;
     }
-    
+
     .navbar ul li a .maintext {
         line-height: 1;
     }
@@ -378,7 +379,7 @@ ul.version {
     font-size: 30px;
 }
 
-.container.blogpost h2 {
+.blogpost h2 {
     margin: 40px 0 10px 0;
     /*border-bottom: 1px solid #eee;*/
     padding-bottom: 5px;
@@ -408,4 +409,25 @@ ul.version {
 .blog .folder-content {
     float: left;
     width: 740px;
+}
+
+.comment {
+    margin: 15px 0 5px 0;
+    padding: 15px 0 5px 0;
+}
+
+    .comment .author {
+        font-size: 80%;
+        line-height: 1;
+        color: #999999;
+    }
+
+    .comment .left img {
+        margin: 5px 10px 0 0;
+        width: 50px;
+        height: 50px;
+    }
+
+.comment-heading {
+    text-align: center;
 }
