Split styles to multiple source files.

--- a/Neptuo.WebSite/Views/Shared/_Layout.cshtml
+++ b/Neptuo.WebSite/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
     <link href="~/Content/bootstrap/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="~/Content/common.css" rel="stylesheet" />
     <link href="~/Content/design.css" rel="stylesheet" />
+    <link href="~/Content/folder.css" rel="stylesheet" />
+    <link href="~/Content/box.css" rel="stylesheet" />
+    <link href="~/Content/blog.css" rel="stylesheet" />
     <link href="~/Content/responsivness.css" rel="stylesheet" />
     <link href="~/Content/syntax.css" rel="stylesheet" />
 </head>
