--- a/Neptuo.WebSite/Views/Shared/_Layout.cshtml
+++ b/Neptuo.WebSite/Views/Shared/_Layout.cshtml
@@ -15,16 +15,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>@((ViewBag.Title != null ? ViewBag.Title + " - " : "") + "Neptuo")</title>
-
     <link href="~/Content/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/bootstrap/bootstrap-theme.min.css" rel="stylesheet" />
-    <link href="~/Content/common.css" rel="stylesheet" />
-    <link href="~/Content/design.css" rel="stylesheet" />
-    <link href="~/Content/folder.css" rel="stylesheet" />
-    <link href="~/Content/box.css" rel="stylesheet" />
-    <link href="~/Content/blog.css" rel="stylesheet" />
-    <link href="~/Content/responsivness.css" rel="stylesheet" />
-    <link href="~/Content/syntax.css" rel="stylesheet" />
+    <link href="~/Content/web.css" rel="stylesheet" />
 </head>
 <body>
 
