--- a/Neptuo.WebSite/Content/Stylesheet/responsivness.css
+++ b/Neptuo.WebSite/Content/Stylesheet/responsivness.css
@@ -1,25 +1,82 @@
-﻿@media (max-width: 992px) {
+﻿@media (max-width: 760px) {
+    .container {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        max-width: 100%;
+    }
+}
 
+@media (max-width: 759px) {
+    .navbar ul li {
+        float: none;
+    }
+    
+    .navbar ul.right li a, .navbar ul.left li a {
+        margin: 0;
+    }
+    
+    .navbar ul li a .subtext {
+        display: block;
+    }
+
+    .body {
+        margin-top: 300px;
+    }
+}
+
+@media (max-width: 460px) {
+    .navbar ul {
+        float: none;
+    }
+
+    .body {
+        margin-top: 400px;
+    }
+}
+
+@media (min-width: 760px) and (max-width: 979px) {
     .body {
         margin-top: 70px;
     }
 
-    .navbar-brand img {
-        height: 60px;
-    }
-    .navbar > .container .navbar-brand {
-        width: 170px;
-    }
-
-    .navbar a {
-        height: 70px;
-    }
-
     .navbar ul li a {
+        height: 70px;
         padding: 10px 20px;
         font-size: 45px;
     }
+
     .navbar ul li a .subtext {
         display: none;
+    }
+
+    .navbar ul.left li a:first-child {
+        width: 180px;
+        background-image: url('Images/Logo-170.png');
+        background-position-x: center;
+        background-position-y: 5px;
+        background-repeat: no-repeat;
+    }
+
+    .navbar ul.left li a:first-child div {
+        display: none;
+    }
+}
+
+@media (min-width: 980px) {
+    .navbar ul.left li a:first-child {
+        width: 250px;
+        background-image: url('Images/Logo-220.png');
+        background-position-x: center;
+        background-position-y: -5px;
+        background-repeat: no-repeat;
+    }
+
+    .navbar ul.left li a:first-child div.maintext {
+        visibility: hidden;
+    }
+
+    .container {
+        max-width: 920px;
     }
 }
