--- a/Neptuo.WebSite/Content/web.css
+++ b/Neptuo.WebSite/Content/web.css
@@ -1,435 +1,594 @@
 ﻿h2, h3 {
-  margin: 0; }
+    margin: 0;
+}
 
 a img {
-  border: none; }
+    border: none;
+}
 
 body {
-  line-height: 1.5; }
+    line-height: 1.5;
+}
 
 p.first {
-  margin-top: 0; }
+    margin-top: 0;
+}
 
 p.last {
-  margin-bottom: 0; }
+    margin-bottom: 0;
+}
 
 .clear {
-  clear: both; }
+    clear: both;
+}
 
 .left {
-  float: left; }
+    float: left;
+}
 
 .right {
-  float: right; }
+    float: right;
+}
 
 .inline-form {
-  display: inline; }
+    display: inline;
+}
 
 .space {
-  margin: 20px; }
+    margin: 20px;
+}
 
 .strong {
-  font-weight: bold; }
+    font-weight: bold;
+}
 
 pre {
-  font: 14px Consolas, "Liberation Mono", Menlo, Courier, monospace;
-  line-height: 1.5;
-  padding: 9.5px 9.5px 0 9.5px;
-  border: none; }
+    font: 14px Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    line-height: 1.5;
+    padding: 9.5px 9.5px 0 9.5px;
+    border: none;
+}
 
 code {
-  color: #333;
-  background: #eee; }
+    color: #333;
+    background: #eee;
+}
 
 input[type=text]:focus {
-  outline: none;
-  border-color: #428bca; }
+    outline: none;
+    border-color: #428bca;
+}
 
 .col-md-2, .col-md-3, .col-md-4, .col-md-6, .col-md-7, .col-md-8 {
-  padding: 0; }
+    padding: 0;
+}
 
 /* ============================================================================================= */
 body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Segoe UI', 'Lucida Grande', Verdana, Arial, Helvetica, sans-serif;
-  font-size: 18px;
-  color: #333;
-  background: #E8E8E8; }
-
-.container {
-  width: 920px; }
+    padding: 0;
+    margin: 0;
+    font-family: 'Segoe UI', 'Lucida Grande', Verdana, Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    color: #333;
+    background: #E8E8E8;
+}
 
 /* ====== TOP MENU & INTRO ===================================================================== */
 .navbar {
-  position: fixed;
-  overflow: hidden;
-  background: #E8E8E8 url("Images/BackgroundSingle.png") repeat 0 bottom;
-  border: none;
-  border-radius: 0; }
+    position: fixed;
+    overflow: hidden;
+    background: #E8E8E8 url("Images/BackgroundSingle.png") repeat 0 bottom;
+    border: none;
+    border-radius: 0;
+}
 
 .navbar .container {
-  padding: 0; }
+    padding: 0;
+}
 
 .navbar a {
-  color: white; }
+    color: white;
+}
 
 .navbar a:hover, .navbar a:focus, .navbar li.active a, .navbar a.active {
-  background: #157FCC; }
+    background: #157FCC;
+}
 
 .navbar a .glyphicon {
-  font-size: 35px;
-  opacity: 0.5; }
-
-.navbar-brand {
-  padding: 5px 0px 6px 7px; }
-
-.navbar > .container .navbar-brand {
-  width: 250px;
-  margin: 0; }
-
-.navbar-brand img {
-  height: 90px; }
+    font-size: 35px;
+    opacity: 0.5;
+}
 
 .navbar a {
-  height: 100px; }
+    height: 100px;
+}
 
-.navbar-brand, .navbar ul, .navbar ul li {
-  display: block;
-  float: left; }
+.navbar ul, .navbar ul li {
+    display: block;
+}
 
 .navbar ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  float: right; }
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.navbar ul li {
+    float: left;
+}
 
 .navbar ul li a {
-  text-decoration: none;
-  padding: 15px 25px 10px 25px;
-  font-size: 56px;
-  font-family: "Gabriola";
-  margin: 0 0 0 10px;
-  color: white;
-  display: block; }
+    text-decoration: none;
+    padding: 15px 25px 10px 25px;
+    font-size: 56px;
+    font-family: "Gabriola";
+    color: white;
+    display: block;
+}
+
+.navbar ul.left li a {
+    margin: 0 10px 0 0;
+}
+
+.navbar ul.right li a {
+    margin: 0 0 0 10px;
+}
+
+.navbar ul.right li:first-child a {
+    margin: 0;
+}
 
 .navbar ul li.disabled a {
-  cursor: not-allowed;
-  color: #737578;
-  background: transparent; }
+    cursor: not-allowed;
+    color: #737578;
+    background: transparent;
+}
 
 .navbar ul li a .maintext {
-  line-height: 1; }
+    line-height: 1;
+}
 
 .navbar ul li a .subtext {
-  display: block;
-  font-size: 22px;
-  line-height: 1; }
+    display: block;
+    font-size: 22px;
+    line-height: 1;
+}
 
 .intro {
-  padding: 40px 0;
-  margin-bottom: 20px;
-  background: #E8E8E8 url("Images/BackgroundSingle.png") repeat 0 bottom; }
+    padding: 40px 0;
+    margin-bottom: 20px;
+    background: #E8E8E8 url("Images/BackgroundSingle.png") repeat 0 bottom;
+}
 
 .intro .intro-content {
-  padding: 0 30px; }
+    padding: 0 30px;
+}
 
 .intro h1 {
-  font-family: "Gabriola", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 160px;
-  line-height: 1;
-  letter-spacing: -2px;
-  text-rendering: optimizelegibility;
-  color: white;
-  margin-bottom: -5px; }
+    font-family: "Gabriola", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 160px;
+    line-height: 1;
+    letter-spacing: -2px;
+    text-rendering: optimizelegibility;
+    color: white;
+    margin-bottom: -5px;
+}
 
 .intro p {
-  font-family: "Gabriola", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  width: 800px;
-  padding-left: 8px;
-  color: white;
-  font-size: 40px;
-  text-align: left; }
+    font-family: "Gabriola", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    width: 800px;
+    padding-left: 8px;
+    color: white;
+    font-size: 40px;
+    text-align: left;
+}
 
 .body {
-  margin-top: 80px;
-  margin-bottom: 20px; }
+    margin-top: 80px;
+    margin-bottom: 20px;
+}
 
 /* ====== FOOTER =============================================================================== */
 footer {
-  background: url("Images/FootBackground.png") repeat-x left top; }
+    background: url("Images/FootBackground.png") repeat-x left top;
+}
 
 footer, footer a {
-  color: #666666; }
+    color: #666666;
+}
 
 footer a {
-  text-decoration: none;
-  font-weight: bold; }
+    text-decoration: none;
+    font-weight: bold;
+}
 
 footer a:hover {
-  text-decoration: underline;
-  color: #666666; }
+    text-decoration: underline;
+    color: #666666;
+}
 
 footer .left, footer .right {
-  padding: 10px 10px; }
+    padding: 10px 10px;
+}
 
 /* ====== IMAGES =============================================================================== */
 .image-left, .image-right {
-  float: left; }
+    float: left;
+}
 
 .image-left img, .image-right img, img.image-left, img.image-right {
-  display: block;
-  background: url("http://www.votocvohoz.cz/assets/default/loading16.gif") no-repeat center center; }
+    display: block;
+    background: url("http://www.votocvohoz.cz/assets/default/loading16.gif") no-repeat center center;
+}
 
 .image-left img + img, .image-right img + img {
-  margin-top: 10px; }
+    margin-top: 10px;
+}
 
 .image-left {
-  margin: 10px 0 10px 10px; }
+    margin: 10px 0 10px 10px;
+}
 
 .image-right {
-  margin: 10px 10px 10px 0px; }
+    margin: 10px 10px 10px 0px;
+}
 
 img.main-image {
-  max-width: 100%;
-  margin: 10px auto;
-  display: block; }
+    max-width: 100%;
+    margin: 10px auto;
+    display: block;
+}
 
 img.additional-image {
-  height: 150px;
-  margin: 0px 10px 10px 0;
-  float: left;
-  display: block; }
+    height: 150px;
+    margin: 0px 10px 10px 0;
+    float: left;
+    display: block;
+}
 
 /* ====== VERSIONS ============================================================================= */
 ul.version {
-  margin: 0;
-  padding: 0;
-  list-style: none; }
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
 
 ul.version li {
-  margin: 20px 0; }
+    margin: 20px 0;
+}
 
 ul.version ul {
-  list-style-type: disc; }
+    list-style-type: disc;
+}
 
 ul.version li li {
-  margin: 0; }
+    margin: 0;
+}
 
 /* ============================================================================================= */
 .folder {
-  margin: 10px;
-  padding: 10px 15px 15px 15px;
-  color: #444444;
-  background: white;
-  border: 1px solid #C0C0C0; }
+    margin: 10px;
+    padding: 10px 15px 15px 15px;
+    color: #444444;
+    background: white;
+    border: 1px solid #C0C0C0;
+}
 
 .folder-heading {
-  margin-bottom: 5px;
-  padding-bottom: 5px;
-  color: #999999;
-  border-bottom: 1px solid #C0C0C0; }
+    margin-bottom: 5px;
+    padding-bottom: 5px;
+    color: #999999;
+    border-bottom: 1px solid #C0C0C0;
+}
 
 .folder-heading h1, .folder-heading h2, .folder-heading h3, .folder-heading h4, .folder-heading h5, .folder-heading h6 {
-  margin: 0;
-  padding: 0; }
+    margin: 0;
+    padding: 0;
+}
 
 .folder-separator {
-  margin: 5px 0;
-  border-top: 1px solid #C0C0C0; }
+    margin: 5px 0;
+    border-top: 1px solid #C0C0C0;
+}
 
 .folder-foot {
-  margin-top: 5px;
-  padding-top: 5px;
-  color: #999999;
-  border-top: 1px solid #C0C0C0; }
+    margin-top: 5px;
+    padding-top: 5px;
+    color: #999999;
+    border-top: 1px solid #C0C0C0;
+}
 
 .folder .col-md-6 {
-  padding-left: 0;
-  padding-right: 15px; }
+    padding-left: 0;
+    padding-right: 15px;
+}
 
 .folder .col-md-right {
-  padding-right: 0px; }
+    padding-right: 0px;
+}
 
 .folder .folder-heading a[href^="http://"]:after {
-  content: "\e164";
-  font-family: 'Glyphicons Halflings';
-  padding-left: 5px;
-  font-size: 60%;
-  opacity: 0.4;
-  color: black; }
+    content: "\e164";
+    font-family: 'Glyphicons Halflings';
+    padding-left: 5px;
+    font-size: 60%;
+    opacity: 0.4;
+    color: black;
+}
 
 .folder-switch {
-  cursor: pointer;
-  float: right; }
+    cursor: pointer;
+    float: right;
+}
 
 .folder-switch:before {
-  content: "\e113"; }
+    content: "\e113";
+}
 
 .folder-collapsed .folder-switch {
-  padding-top: 5px; }
+    padding-top: 5px;
+}
 
 .folder-collapsed .folder-switch:before {
-  content: "\e114"; }
+    content: "\e114";
+}
 
 .folder-collapsed .folder-heading {
-  padding-bottom: 0;
-  margin-bottom: 0;
-  border-bottom: none; }
+    padding-bottom: 0;
+    margin-bottom: 0;
+    border-bottom: none;
+}
 
 .folder-collapsed .folder-content {
-  display: none; }
+    display: none;
+}
 
 input.folder {
-  width: 870px;
-  padding-top: 15px; }
+    width: 870px;
+    padding-top: 15px;
+}
 
 /* ============================================================================================= */
 .box .folder-heading {
-  text-align: center; }
+    text-align: center;
+}
 
 .box span {
-  font-size: 100px; }
+    font-size: 100px;
+}
 
 .box p {
-  text-align: justify; }
+    text-align: justify;
+}
 
 /* ============================================================================================= */
 .intro.blogpost h1 {
-  font-size: 100px; }
+    font-size: 100px;
+}
 
 .intro.blogpost p {
-  font-size: 30px; }
+    font-size: 30px;
+}
 
 .blogpost h2 {
-  margin: 40px 0 10px 0;
-  /*border-bottom: 1px solid #eee;*/
-  padding-bottom: 5px; }
+    margin: 40px 0 10px 0;
+    /*border-bottom: 1px solid #eee;*/
+    padding-bottom: 5px;
+}
 
 .blog .year {
-  margin: 0 20px 10px 20px;
-  font-weight: bold; }
+    margin: 0 20px 10px 20px;
+    font-weight: bold;
+}
 
 .blog .date {
-  float: left;
-  width: 80px;
-  height: 80px;
-  margin: 0 15px 15px 0; }
+    float: left;
+    width: 80px;
+    height: 80px;
+    margin: 0 15px 15px 0;
+}
 
 .blog .date .day, .date .month {
-  text-align: center; }
+    text-align: center;
+}
 
 .blog .date .day {
-  font-weight: bold;
-  font-size: 40px; }
+    font-weight: bold;
+    font-size: 40px;
+}
 
 .blog .folder-content {
-  float: left;
-  width: 740px; }
+    float: left;
+    width: 740px;
+}
 
 .comment {
-  margin: 15px 0 5px 0;
-  padding: 15px 0 5px 0; }
+    margin: 15px 0 5px 0;
+    padding: 15px 0 5px 0;
+}
 
 .comment .author {
-  font-size: 80%;
-  line-height: 1;
-  color: #999999; }
+    font-size: 80%;
+    line-height: 1;
+    color: #999999;
+}
 
 .comment .left img {
-  margin: 5px 10px 0 0;
-  width: 50px;
-  height: 50px; }
+    margin: 5px 10px 0 0;
+    width: 50px;
+    height: 50px;
+}
 
 .comment-heading {
-  text-align: center; }
+    text-align: center;
+}
 
-@media (max-width: 992px) {
-  .body {
-    margin-top: 70px; }
-  .navbar-brand img {
-    height: 60px; }
-  .navbar > .container .navbar-brand {
-    width: 170px; }
-  .navbar a {
-    height: 70px; }
-  .navbar ul li a {
-    padding: 10px 20px;
-    font-size: 45px; }
-  .navbar ul li a .subtext {
-    display: none; } }
+@media (max-width: 760px) {
+    .container {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        max-width: 100%;
+    }
+}
+
+@media (max-width: 759px) {
+    .navbar ul li {
+        float: none;
+    }
+    .navbar ul.right li a, .navbar ul.left li a {
+        margin: 0;
+    }
+    .navbar ul li a .subtext {
+        display: block;
+    }
+    .body {
+        margin-top: 300px;
+    }
+}
+
+@media (max-width: 460px) {
+    .navbar ul {
+        float: none;
+    }
+    .body {
+        margin-top: 400px;
+    }
+}
+
+@media (min-width: 760px) and (max-width: 979px) {
+    .body {
+        margin-top: 70px;
+    }
+    .navbar ul li a {
+        height: 70px;
+        padding: 10px 20px;
+        font-size: 45px;
+    }
+    .navbar ul li a .subtext {
+        display: none;
+    }
+    .navbar ul.left li a:first-child {
+        width: 180px;
+        background-image: url("Images/Logo-170.png");
+        background-position-x: center;
+        background-position-y: 5px;
+        background-repeat: no-repeat;
+    }
+    .navbar ul.left li a:first-child div {
+        display: none;
+    }
+}
+
+@media (min-width: 980px) {
+    .navbar ul.left li a:first-child {
+        width: 250px;
+        background-image: url("Images/Logo-220.png");
+        background-position-x: center;
+        background-position-y: -5px;
+        background-repeat: no-repeat;
+    }
+    .navbar ul.left li a:first-child div.maintext {
+        visibility: hidden;
+    }
+    .container {
+        max-width: 920px;
+    }
+}
 
 .highlight.csharp {
-  color: #333;
-  font-size: 12px;
-  line-height: 16px; }
+    color: #333;
+    font-size: 12px;
+    line-height: 16px;
+}
 
 .highlight.csharp .identifier {
-  color: #795da3; }
+    color: #795da3;
+}
 
 .highlight.csharp .keyword {
-  color: #a71d5d; }
+    color: #a71d5d;
+}
 
 .highlight.csharp .comment {
-  color: #969896; }
+    color: #969896;
+}
 
 .highlight.csharp .string {
-  color: #df5000; }
+    color: #df5000;
+}
 
 .highlight.csharp .constant {
-  color: #0086b3; }
+    color: #0086b3;
+}
 
 .highlight.xml {
-  color: #333;
-  font-size: 12px;
-  line-height: 16px; }
+    color: #333;
+    font-size: 12px;
+    line-height: 16px;
+}
 
 .highlight.xml .cdata {
-  color: #df5000; }
+    color: #df5000;
+}
 
 .highlight.xml .cdatavalue {
-  color: #df5000; }
+    color: #df5000;
+}
 
 .highlight.xml .element {
-  color: #63a35c; }
+    color: #63a35c;
+}
 
 .highlight.xml .attribute {
-  color: #795da3; }
+    color: #795da3;
+}
 
 .highlight.xml .string {
-  color: #df5000; }
+    color: #df5000;
+}
 
 .highlight.xml .quot {
-  color: #df5000; }
+    color: #df5000;
+}
 
 .highlight.xml .comment {
-  color: #969896; }
+    color: #969896;
+}
 
 .highlight.javascript {
-  color: #333;
-  font-size: 12px;
-  line-height: 16px; }
+    color: #333;
+    font-size: 12px;
+    line-height: 16px;
+}
 
 .highlight.javascript .keyword {
-  color: #a71d5d; }
+    color: #a71d5d;
+}
 
 .highlight.javascript .constant {
-  color: #0086b3; }
+    color: #0086b3;
+}
 
 .highlight.javascript .string {
-  color: #df5000; }
+    color: #df5000;
+}
 
 .highlight.json {
-  color: #333;
-  font-size: 12px;
-  line-height: 16px; }
+    color: #333;
+    font-size: 12px;
+    line-height: 16px;
+}
 
 .highlight.json .keyword {
-  color: #a71d5d; }
+    color: #a71d5d;
+}
 
 .highlight.json .constant {
-  color: #0086b3; }
+    color: #0086b3;
+}
 
 .highlight.json .string {
-  color: #df5000; }
+    color: #df5000;
+}
 
