--- a/Neptuo.WebSite/Views/Shared/_Layout.cshtml
+++ b/Neptuo.WebSite/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
-﻿@helper MenuItem(string text, string subtext, string icon, string url)
+﻿@helper MenuItem(string text, string subtext, string icon, string url, bool isExactUrlMatched = false)
 {
-    <li class="@Request.ActiveCssClass(url)">
+    <li class="@Request.ActiveCssClass(url, isExactUrlMatched)">
         <a href="@Request.ResolveUrl(url)">
             <div class="maintext">
                 @text
@@ -23,10 +23,10 @@
 
     <nav class="navbar navbar-fixed-top" role="navigation">
         <div class="container">
-            <a class="navbar-brand  @Request.ActiveCssClass("~/", true)" href="~/">
-                <img src="~/Content/Images/Logo.png" alt="Neptuo logo" height="80" />
-            </a>
-            <ul>
+            <ul class="left">
+                @MenuItem("Home", "What would you like?", "home", "~/", true)
+            </ul>
+            <ul class="right">
                 @MenuItem("Projects", "Projects we are working on", "cloud", "~/project")
                 @MenuItem("Services", "Our services and references", "globe", "~/service")
                 @MenuItem("Blog", "Thoughts to share", "bookmark", "~/blog")
