--- a/Neptuo.WebSite/Content/Stylesheet/design.css
+++ b/Neptuo.WebSite/Content/Stylesheet/design.css
@@ -112,7 +112,7 @@ body {
 
 .intro p {
     font-family: "Gabriola", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    width: 800px;
+    max-width: 800px;
     padding-left: 8px;
     color: white;
     font-size: 40px;
@@ -124,7 +124,7 @@ body {
 
 
 .body {
-    margin-top: 80px;
+    margin-top: 100px;
     margin-bottom: 20px;
 }
 
