--- a/Neptuo.WebSite/Content/Stylesheet/folder.css
+++ b/Neptuo.WebSite/Content/Stylesheet/folder.css
@@ -78,7 +78,23 @@
     display: none;
 }
 
-input.folder {
+.folder .folder-icon {
+    height: 30px;
+    position: relative;
+    top: -5px;
+}
+
+/*.folder-wrap {
+    padding: 0;
+}
+
+.folder.folder-wrap input[type=text] {
     width: 870px;
+    padding-top: 15px;
+    border: none;
+}*/
+
+input.folder {
+    width: calc(100% - 20px);
     padding-top: 15px;
 }
