--- a/Neptuo.WebSite/Content/web.scss
+++ b/Neptuo.WebSite/Content/web.scss
@@ -1,4 +1,4 @@
-﻿@import "Stylesheet/variables";
+﻿@import "Stylesheet/_variables";
 @import "Stylesheet/common";
 @import "Stylesheet/design";
 @import "Stylesheet/folder";
@@ -6,3 +6,4 @@
 @import "Stylesheet/blog";
 @import "Stylesheet/responsivness";
 @import "Stylesheet/syntax";
+@import "Stylesheet/ie";
